--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/index.js": {
+      "includeFiles": ["dist/client/**"]
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/dist/index.js"
+      "dest": "/api/index.js"
     },
     {
       "handle": "filesystem"
@@ -18,13 +20,5 @@
       "src": "/(.*)",
       "dest": "/dist/client/$1"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "functions": {
-    "dist/index.js": {
-      "includeFiles": ["dist/client/**"]
-    }
-  }
+  ]
 }
