--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   },
   "functions": {
     "api/index.js": {
-      "includeFiles": ["dist/client/**"]
+      "includeFiles": "dist/client/**"
     }
   },
   "routes": [
